manifests/sentry/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sentry
  labels:
    name: sentry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: sentry
    spec:
      containers:
      - name: memcached
        image: memcached:1.4
      - name: redis
        image: redis:3-alpine
      - name: postgres
        image: postgres:9.6
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: postgres-data
      - name: smtp
        image: tianon/exim4
      - name: web
        image: repo/mycompany_sentry:0.1.1
      - name: worker
        image: repo/mycompany_sentry:0.1.1
        args:
        - run
        - worker
      - name: cron
        image: repo/mycompany_sentry:0.1.1
        args:
        - run
        - cron
      volumes:
        - name: postgres-data
          hostPath:
            path: /zpool/k8s/platform/sentry/postgres
