manifests/sentry/app.yml
apiVersion: v1
kind: Service
metadata:
  name: sentry-web
  namespace: sentry
  labels:
    app: sentry-web
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 9000
    protocol: TCP
  selector:
    app: sentry-web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sentry-web
  namespace: sentry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sentry-web
    spec:
      containers:
      - name: smtp
        image: tianon/exim4
      - name: memcached
        image: memcached:1.4
      - name: redis
        image: redis:3.2-alpine
      - name: sentry-web
        image: sentry:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        args:
        - run
        - web
      - name: sentry-worker
        image: sentry:latest
        imagePullPolicy: Always
        args:
        - run
        - worker
      - name: sentry-cron
        image: sentry:latest
        imagePullPolicy: Always
        args:
        - run
        - cron
