manifests/sentry/db.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: sentry
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: postgres
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
  namespace: sentry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
       - name: postgres
         image: postgres:9.6
         volumeMounts:
         - name: postgres-data
           mountPath: "/var/lib/postgresql/data"
      volumes:
      - name: postgres-data
        hostPath:
          path: /zpool/k8s/platform/sentry/postgres
