manifests/sentry/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentry
  namespace: sentry
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - sentry.tsar.su
    secretName: sentry-tls
  rules:
  - host: sentry.tsar.su
    http:
      paths:
      - path: /
        backend:
          serviceName: sentry-web
          servicePort: 80
